--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,24 +6,34 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>{% block title %}Series !{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}{% endblock %}
+        <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/normalize.css') }}">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="icon" href="{{ asset('img/icon.png') }}">
+        {% block stylesheets %}
+
+        {% endblock %}
 
         {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
+{#            {% block importmap %}{{ importmap('app') }}{% endblock %}#}
         {% endblock %}
     </head>
     <body>
-        <header>
-            <h1>Series !</h1>
-            {% include ('inc/nav.html.twig') %}
-        </header>
-        <main>
-            {% block body %}{% endblock %}
-        </main>
-        <footer>
-
-            <div>&copy; {{ "now" | date('Y') }} Series !</div>
-        </footer>
+        <div class="container">
+            <header>
+                <h1><a href="{{ path('main_home') }}"><img src="{{ asset('img/logo.svg') }}" alt="Series !"></a></h1>
+                {% include ('inc/nav.html.twig') %}
+            </header>
+            <main>
+                {% block body %}{% endblock %}
+            </main>
+            <footer>
+                {% include ('inc/nav.html.twig') %}
+                <div>&copy; {{ "now" | date('Y') }} Series !</div>
+            </footer>
+        </div>
 
     </body>
 </html>
