--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -1,7 +1,7 @@
 <nav>
     <ul>
-        <li><a href="#" title="Home">Home</a></li>
-        <li><a href="#" title=""></a></li>
-        <li><a href="#" title=""></a></li>
+        <li><a href="{{ path('main_home') }}" title="Home">Home</a></li>
+        <li><a href="{{ path('serie_list') }}" title="All Series">Series</a></li>
+        <li><a href="{{ path('serie_create') }}" title="Create a new serie">Create</a></li>
     </ul>
 </nav>
