--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -2,6 +2,16 @@
     <ul>
         <li><a href="{{ path('main_home') }}" title="Home">Home</a></li>
         <li><a href="{{ path('serie_list') }}" title="All Series">Series</a></li>
+        {% if app.user %}
         <li><a href="{{ path('serie_create') }}" title="Create a new serie">Create</a></li>
+        <li><a href="{{ path('season_create') }}" title="Create a new season">Create season</a></li>
+        <li><a href="{{ path('app_logout') }}" title="Logout">logout ({{ app.user.firstname }})</a></li>
+            {% if is_granted('ROLE_ADMIN') %}
+                <li><a href="{{ path('admin_dashboard') }}" title="Dashboard">Admin</a></li>
+            {% endif %}
+        {% else %}
+            <li><a href="{{ path('app_login') }}" title="Login">Login</a></li>
+            <li><a href="{{ path('app_register') }}" title="Create account">Register</a></li>
+        {% endif %}
     </ul>
 </nav>
