--- a/templates/serie/create.html.twig
+++ b/templates/serie/create.html.twig
@@ -5,6 +5,11 @@
 {% endblock %}
 
 {% block body %}
-
+        {{ form_start(serieForm) }}
+        {{ form_widget(serieForm) }}
+        <button type="submit">Create !</button>
+        {{ form_end(serieForm) }}
 {% endblock %}
+
+
 
